--- a/preferences-gradle-plugin/src/main/resources/META-INF/gradle-plugins/com.hippo.android-preferences.properties
+++ b/preferences-gradle-plugin/src/main/resources/META-INF/gradle-plugins/com.hippo.android-preferences.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=com.hippo.preferences.PreferencesPlugin
+implementation-class=com.hippo.preferences.AndroidPreferencesPlugin
